--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+   <link rel="stylesheet" href="style.css">
+
 </head>
-<body>
-    
+<body>   
+   <section class="birthday-section">
+    <div class="birthday-box">
+        <h2>Happy Birthday Mama♡♡♡</h2>
+
+      <div class="photo-row">
+    <img src="image/f1.jpeg" class="birthday-photo anim-left">
+    <img src="image/f2.jpg" class="birthday-photo anim-right">
+    <img src="image/f3.jpeg" class="birthday-photo anim-bottom">
+</div>
+
+
+    </div>
+</section>
+
+<script src="script.js"></script>
 </body>
 </html>
+
+
