--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,12 +11,21 @@
 <body>   
    <section class="birthday-section">
     <div class="birthday-box">
-        <h2>Happy Birthday Mama♡♡♡</h2>
+ 
+        <h2 class="birthday-title">Happy Birthday Mama♡♡♡</h2>
+        
+       <div class="photo-row">
+            <img src="image/f1.jpeg" class="birthday-photo anim-left">
+            <img src="image/f2.jpg" class="birthday-photo anim-right">
+            <img src="image/f3.jpeg" class="birthday-photo anim-bottom">
+        </div>
 
-      <div class="photo-row">
-    <img src="image/f1.jpeg" class="birthday-photo anim-left">
-    <img src="image/f2.jpg" class="birthday-photo anim-right">
-    <img src="image/f3.jpeg" class="birthday-photo anim-bottom">
+       <!-- STICKERS -->
+<div class="stickers">
+    <img src="image/s1.png" class="sticker sticker-top-left">
+    <img src="image/s2.png" class="sticker sticker-top-right">
+    <img src="image/s2.png" class="sticker sticker-bottom-left">
+    <img src="image/s1.png" class="sticker sticker-bottom-right">
 </div>
 
 
@@ -25,5 +35,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
