--- a/index.html
+++ b/index.html
@@ -27,11 +27,102 @@
     <img src="image/s2.png" class="sticker sticker-bottom-left">
     <img src="image/s1.png" class="sticker sticker-bottom-right">
 </div>
-
-
     </div>
 </section>
 
-<script src="script.js"></script>
+<!-- ================= BOOK SECTION ================= -->
+<section class="book-section">
+  <div class="book">
+
+    <div class="page" style="--i:1">
+      <img src="image/fm (13).jpeg" class="page-photo">
+      <p>Klik ujung bukunya ya, Ma 💌💌💌</p>
+    </div>
+
+     <div class="page" style="--i:2">
+      <img src="image/fm (7).jpeg" class="page-photo">
+      <p>HAPPY BIRTHDAY MAMAAA🤍🤍🤍</p>
+    </div>
+
+    <div class="page" style="--i:3">
+      <img src="image/fm (1).jpeg" class="page-photo">
+      <p>Terima kasih untuk semua kasih sayang 🤍</p>
+    </div>
+
+    <div class="page" style="--i:4">
+      <img src="image/fm (2).jpeg" class="page-photo">
+      <p>Peluk paling hangat selalu dari Mama 🌷</p>
+    </div>
+
+    <div class="page" style="--i:5">
+      <img src="image/fm (5).jpeg" class="page-photo">
+      <p>Doa Mama adalah kekuatan terbesar ✨</p>
+    </div>
+
+    <div class="page" style="--i:6">
+      <img src="image/fm (6).jpeg" class="page-photo">
+      <p>Waktu berjalan, cinta tetap sama 🌷</p>
+    </div>
+
+    <div class="page" style="--i:7">
+      <img src="image/fm (15).jpeg" class="page-photo">
+      <p>Dunia terasa lebih baik saat Mama tersenyum 😊</p>
+    </div>
+
+    <div class="page" style="--i:8">
+      <img src="image/fm (12).jpeg" class="page-photo">
+      <p>Setiap senyum Mama bikin kuat 😊</p>
+    </div>
+
+    <div class="page" style="--i:9">
+      <img src="image/fm (8).jpeg" class="page-photo">
+      <p>Kami bangga punya Mama sebaik ini 💕</p>
+    </div>
+
+    <div class="page" style="--i:10">
+      <img src="image/f2.jpg" class="page-photo">
+      <p>Terima kasih untuk cinta tanpa syarat ✨</p>
+    </div>
+
+    <div class="page" style="--i:11">
+      <img src="image/fm (9).jpeg" class="page-photo">
+      <p>Doaku selalu untuk kesehatan Mama 🙏</p>
+    </div>
+
+    <div class="page" style="--i:12">
+      <img src="image/fm (4).jpeg" class="page-photo">
+      <p>Semoga Mama selalu bahagia 🌸</p>
+    </div>
+
+    <div class="page" style="--i:13">
+      <img src="image/fm (3).jpeg" class="page-photo">
+      <p>Terima kasih sudah selalu ada 💝</p>
+    </div>
+
+    <div class="page" style="--i:14">
+      <img src="image/fm (14).jpeg" class="page-photo">
+      <p>Selalu istimewa 🤍</p>
+    </div>
+
+    <div class="page" style="--i:15">
+      <img src="image/fm (16).jpeg" class="page-photo">
+      <p>Kami sayang Mama sepenuh hati 🤍</p>
+    </div>
+
+    <div class="page" style="--i:16">
+      <img src="image/fm (11).jpeg" class="page-photo">
+      <p>Tak ada cinta sekuat cinta Mama 💖</p>
+    </div>
+    
+     <div class="page" style="--i:17">
+      <img src="image/fm (10).jpeg" class="page-photo">
+      <p>Selamat Ulang Tahun Mama 🎂💐</p>
+    </div>
+
+
+  </div>
+</section>
+
+<script src="script.js"> </script>
 </body>
 </html>
