--- a/index.html
+++ b/index.html
@@ -119,10 +119,14 @@
       <p>Selamat Ulang Tahun Mama 🎂💐</p>
     </div>
 
-
   </div>
 </section>
 
-<script src="script.js"> </script>
+<!-- SURPRISE OVERLAY -->
+<div id="birthday-surprise">
+  <div class="surprise-text">Happy Birthday Mama 💖🎂</div>
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
